changePic + deletePic
