# internal/api/server.go
@@ -5,12 +5,19 @@ import (
 	"DevIntApp/internal/app/ds"
 	"DevIntApp/internal/app/dsn"
 	"DevIntApp/internal/app/repository"
+	"bytes"
+	"context"
 	"github.com/gin-gonic/gin"
 	"github.com/minio/minio-go/v7"
+	"github.com/minio/minio-go/v7/pkg/credentials"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
+	"io/ioutil"
 	"log"
+	"mime/multipart"
 	"net/http"
+	"strings"
+	"time"
 )
 
 type Application struct {
@@ -83,5 +90,51 @@ func New() (*Application, error) {
 		return nil, err
 	}
 
+	app.minioClient, err = minio.New(app.config.Minio.Endpoint, &minio.Options{
+		Creds:  credentials.NewStaticV4(app.config.Minio.MinioAccess, app.config.Minio.MinioSecret, ""),
+		Secure: false,
+	})
+	if err != nil {
+		return nil, err
+	}
 	return &app, nil
+}
+
+func (a *Application) UploadImage(c *gin.Context, image *multipart.FileHeader) (string, error) {
+	openFile, err := image.Open()
+	defer func() {
+		openFile.Close()
+	}()
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return "", err
+	}
+	fileBytes, err := ioutil.ReadAll(openFile)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return "", err
+	}
+	reader := bytes.NewReader(fileBytes)
+	_, err = a.minioClient.PutObject(context.Background(), a.config.Minio.BucketName, image.Filename, reader, image.Size, minio.PutObjectOptions{})
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return "", err
+	}
+	log.Println("uploaded")
+	url, err := a.minioClient.PresignedGetObject(context.Background(), a.config.Minio.BucketName, image.Filename, time.Second*24*60*60, nil)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return "", err
+	}
+	return strings.Split(url.String(), "?")[0], nil
+}
+
+func (a *Application) DeleteImage(c *gin.Context, meal ds.Meals) error {
+	splitedUrl := strings.Split(meal.ImageUrl, "/")
+	err := a.minioClient.RemoveObject(context.Background(), a.config.Minio.BucketName, splitedUrl[len(splitedUrl)-1], minio.RemoveObjectOptions{})
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return err
+	}
+	return nil
 }
